cka/study-guide/3-services-and-networking/ingress/1-wear-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wear
  labels:
    app: wear
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wear
  template:
    metadata:
      labels:
        app: wear
    spec:
      containers:
        - name: wear
          image: nginx:alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
            requests:
              memory: "64Mi"
              cpu: "128m"
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args:
            - echo "Hi from $HOSTNAME from wear" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: wear
spec:
  selector:
    app: wear
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
